1.0.0-b6

--------------------------------------------------------------------------------